# NDKDemo

./: README.md  build.gradle
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/ndkdemo/: MainActivity.java
app/src/main/ndkBuild/: Android.mk  hello-jni.c
gradle/wrapper/: gradle-wrapper.properties
